[workspace]
members = [
    "reth-extension",
    "execution-client",
    "consensus-client"
]
resolver = "2"

[workspace.dependencies]
# Mysticeti
consensus-core = { git = "https://github.com/scalarorg/mysticeti.git", package = "consensus-core" }
consensus-config = { git = "https://github.com/scalarorg/mysticeti.git", package = "consensus-config" }
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "69d496c71fb37e3d22fe85e5bbfd4256d61422b9" }
fastcrypto-tbls = { git = "https://github.com/MystenLabs/fastcrypto", rev = "69d496c71fb37e3d22fe85e5bbfd4256d61422b9" }
fastcrypto-zkp = { git = "https://github.com/MystenLabs/fastcrypto", rev = "69d496c71fb37e3d22fe85e5bbfd4256d61422b9", package = "fastcrypto-zkp" }
# Core dependencies
alloy-consensus = { version = "1.0.23", default-features = false }
alloy-eips = { version = "1.0.23", default-features = false }
alloy-harkforks = { version = "0.2.12", default-features = false }
alloy-primitives = { version = "1.3.0", default-features = false, features = ["map-foldhash"] }
alloy-rpc-types-engine = { version = "1.0.23", default-features = false }
base64 = "0.22.1"
tokio = { version = "1.0", features = ["full"] }

rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
bytes = { version = "1.5.0", features = ["serde"] }
thiserror = "2.0.12"
eyre = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4"] }

# Networking and HTTP
reqwest = { version = "0.12.22", features = ["json"] }
jsonrpsee = { version = "0.25", features = ["server", "client", "macros"] }
http = "1.3.1"

#async 
async-stream = "0.3"
async-trait = "0.1.68"
futures = "0.3"
futures-core = "0.3"
futures-util = { version = "0.3", default-features = false }
hyper = "1.3"
hyper-util = "0.1.5"

# Crypto and hashing
sha2 = "0.10"
sha3 = "0.10"
secp256k1 = "0.31"
hex = "0.4"
rustc-hash = { version = "2.0", default-features = false }

# Ethereum types
ethereum-types = "0.15.1"
rlp = "0.6.1"
primitive-types = "0.13.1"

# Time and duration
chrono = { version = "0.4", features = ["serde"] }

derive-getters = "0.5.0"

# Testing dependencies
tokio-test = "0.4"
criterion = "0.7"

# Add execution and consensus client as dependencies for integration tests
reth-extension = { path = "reth-extension" }
execution-client = { path = "execution-client" }
consensus-client = { path = "consensus-client" }
[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.test]
opt-level = 1
