[workspace.package]
version = "1.6.0"
edition = "2021"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/scalarorg/fastevm"
repository = "https://github.com/scalarorg/fastevm"
exclude = [".github/", "testing"]

[workspace]
members = [
    "reth-extension",
    "execution-client",
    "consensus-client",
    "testing/integration"
]
resolver = "2"

[workspace.lints]
rust.missing_debug_implementations = "warn"
rust.missing_docs = "warn"
rust.rust_2018_idioms = { level = "deny", priority = -1 }
rust.unreachable_pub = "warn"
rust.unused_must_use = "deny"
rustdoc.all = "warn"
# rust.unnameable-types = "warn"

[workspace.dependencies]
# Mysticeti
consensus-core = { git = "https://github.com/scalarorg/mysticeti.git", package = "consensus-core" }
consensus-config = { git = "https://github.com/scalarorg/mysticeti.git", package = "consensus-config" }
fastcrypto = { git = "https://github.com/MystenLabs/fastcrypto", rev = "69d496c71fb37e3d22fe85e5bbfd4256d61422b9" }
fastcrypto-tbls = { git = "https://github.com/MystenLabs/fastcrypto", rev = "69d496c71fb37e3d22fe85e5bbfd4256d61422b9" }
fastcrypto-zkp = { git = "https://github.com/MystenLabs/fastcrypto", rev = "69d496c71fb37e3d22fe85e5bbfd4256d61422b9", package = "fastcrypto-zkp" }

# Core dependencies
alloy = { version = "=1.0.23", default-features = false, features = ["network", "providers", "rpc", "reqwest"] }
alloy-consensus = { version = "=1.0.23", default-features = false }
alloy-eips = { version = "=1.0.23", default-features = false }
alloy-network = { version = "=1.0.23", default-features = false }
alloy-rpc-types-engine = { version = "=1.0.23", default-features = false }
alloy-rpc-types-eth = { version = "=1.0.23", default-features = false }
alloy-signer = { version = "=1.0.23", default-features = false }
alloy-signer-local = { version = "=1.0.23", default-features = false }
alloy-serde = { version = "=1.0.23", default-features = false }
alloy-harkforks = { version = "0.2.12", default-features = false }
alloy-provider = { version = "=1.0.23", default-features = false, features = ["reqwest"] }
alloy-primitives = { version = "1.3.0", default-features = false, features = ["map-foldhash"] }
alloy-rlp = { version = "0.3.10", default-features = false, features = ["core-net"] }

# Reth
reth-basic-payload-builder = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0", package = "reth-basic-payload-builder" }
reth-payload-builder = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0", package = "reth-payload-builder" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0", package = "reth-chainspec" }
reth-consensus = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0", package = "reth-consensus" }
reth-db = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0", package = "reth-db", features = ["mdbx", "test-utils", "disable-lock"] }
reth-db-api= { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0", package = "reth-db-api" }
reth-db-common = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0", package = "reth-db-common" }
reth-errors = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0", package = "reth-errors" }
reth-ethereum = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0", package = "reth-ethereum", features = ["node", "pool", "cli"] }
reth-ethereum-consensus = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0", package = "reth-ethereum-consensus" }
reth-ethereum-engine-primitives = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0", package = "reth-ethereum-engine-primitives" }
reth-ethereum-primitives = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0", package = "reth-ethereum-primitives" }
reth-ethereum-payload-builder = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0", package = "reth-ethereum-payload-builder" }
reth-revm = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0", package = "reth-revm", features = ["std", "witness"] }
reth-evm = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0", package = "reth-evm" }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0", package = "reth-evm-ethereum" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0", package = "reth-node-api" }
reth-node-builder = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0", package = "reth-node-builder" }
reth-primitives-traits = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0", package = "reth-primitives-traits" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0", package = "reth-primitives" }
reth-provider = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0", package = "reth-provider", features = ["test-utils"] }
reth-rpc = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0", package = "reth-rpc" }
reth-rpc-api = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0", package = "reth-rpc-api" }
reth-rpc-layer = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0", package = "reth-rpc-layer" }
reth-stateless = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0", package = "reth-stateless" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0", package = "reth-tracing" }
reth-trie = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0", package = "reth-trie" }
reth-trie-db = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0", package = "reth-trie-db" }
reth-network-peers = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0", package = "reth-network-peers" }
# reth-tokio-util = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0", package = "reth-tokio-util" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth.git", tag = "v1.6.0", package = "reth-transaction-pool" }

revm = { version = "28.0.1", default-features = false }
walkdir = "2.3.3"

base64 = "0.22.1"
bincode = "2.0"
tokio = { version = "1.0", features = ["full"] }

rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
bytes = { version = "1.5.0", features = ["serde"] }
thiserror = "2.0.12"
eyre = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0", features = ["v4"] }

# Networking and HTTP
reqwest = { version = "0.12.22", features = ["json"] }
jsonrpsee = { version = "0.25", features = ["server", "client", "macros"] }
http = "1.3.1"

#async 
async-stream = "0.3"
async-trait = "0.1.68"
futures = "0.3"
futures-core = "0.3"
futures-util = { version = "0.3", default-features = false }
hyper = "1.3"
hyper-util = "0.1.5"

# Crypto and hashing
sha2 = "0.10"
sha3 = "0.10"
secp256k1 = "0.30"
hex = "0.4"
# rustc-hash = { version = "2.0", default-features = false }

# Ethereum types
ethereum-types = "0.15.1"
rlp = "0.6.1"
primitive-types = "0.13.1"

# Time and duration
chrono = { version = "0.4", features = ["serde"] }

derive-getters = "0.5.0"

# Testing dependencies
tokio-test = "0.4"
criterion = "0.7"
alloy-genesis = { version = "1.0.23", default-features = false }
rayon = "1.7"

# Add execution and consensus client as dependencies for integration tests
reth-extension = { path = "reth-extension" }
fastevm-execution = { path = "execution-client" }
fastevm-consensus = { path = "consensus-client" }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.test]
opt-level = 1
