[package]
name = "fastevm-execution"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "fastevm-execution"
path = "src/main.rs"

[[bin]]
name = "cli"
path = "src/cli.rs"

[dependencies]
reth-extension = { workspace = true }
# Ethereum
alloy-primitives = { workspace = true, default-features = false, features = ["map-foldhash"] }
alloy-rpc-types-eth = { workspace = true }
alloy-consensus = { workspace = true }
# alloy-rlp = { workspace = true }
eyre = { workspace = true}
futures-util = { workspace = true}
tracing = { workspace = true }
clap = { version = "4.0", features = ["derive"] }  
hex = { workspace = true }
secp256k1 = { workspace = true }
rustc-hash = { workspace = true }
# Reth
reth-network-peers = { workspace = true }
reth-payload-builder = { workspace = true }
reth-basic-payload-builder = { workspace = true }
reth-ethereum = { workspace = true }
reth-ethereum-payload-builder = { workspace = true }
reth-ethereum-engine-primitives = { workspace = true }
reth-evm = { workspace = true }
reth-rpc-layer = { workspace = true }
reth-errors = { workspace = true }
reth-transaction-pool = { workspace = true }

# Additional dependencies for RPC and caching
jsonrpsee = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
tokio-stream = "0.1"

# Dependencies for mnemonic and account generation
bip39 = "2.0"
hdwallet = "0.3"
serde_json = "1.0"
sha2 = "0.10"

# Consensus dependencies
# consensus-core = { workspace = true }

[dev-dependencies]
tokio-test = { workspace = true }
tempfile = "3"
# alloy = { workspace = true, features = ["network", "rpc"] }
# alloy-signer-local = { workspace = true }
http = { workspace = true }