[package]
name = "reth-extension"
version = "0.1.0"
edition = "2021"

[dependencies]
eyre = {workspace = true}
# futures-util = {workspace = true}
tracing = { workspace = true }
alloy-primitives = { workspace = true }


# Additional dependencies for RPC and caching
jsonrpsee = { workspace = true }
# tokio = { workspace = true }
# serde = { workspace = true }
# serde_json = { workspace = true }
# anyhow = { workspace = true }
# thiserror = { workspace = true }
# async-stream = { workspace = true }
# async-trait = { workspace = true }
# futures = { workspace = true }
# lru = "0.12"
# dashmap = "5.5"
# uuid = { workspace = true }
# tokio-stream = "0.1"

[dev-dependencies]
tokio-test = { workspace = true }